# ScriptCollection

./: .betterleaks.toml  .gitignore  Contributing.md  GitVersion.yml  ReadMe.md  package.json
.ScriptCollection/: ProductInformation.xml
.ScriptCollection/OCIImages/: ImageDefinition.csv
.claude/: settings.json
.github/workflows/: buildpipeline.yml
.well-known/: security.txt
Other/Metrics/: RepositoryStatisticsPerCommit.csv
Other/Reference/Technical/Diagrams/: CodeUnits-Overview.plantuml  LoC-Diagram.csv  LoC-Diagram.json
Other/Resources/Changelog/: v3.5.10.md  v3.5.11.md  v3.5.12.md  v3.5.13.md  v3.5.14.md  v3.5.27.md  v3.5.28.md  v3.5.30.md  v3.5.31.md  v3.5.32.md  v3.5.8.md  v3.5.9.md  v4.2.100.md  v4.2.105.md  v4.2.106.md  v4.2.109.md  v4.2.113.md  v4.2.115.md  v4.2.116.md  v4.2.117.md  v4.2.118.md  v4.2.119.md  v4.2.120.md  v4.2.121.md  v4.2.122.md  v4.2.123.md  v4.2.124.md  v4.2.125.md  v4.2.126.md  v4.2.128.md  v4.2.130.md  v4.2.131.md  v4.2.132.md  v4.2.134.md  v4.2.135.md  v4.2.136.md  v4.2.137.md  v4.2.139.md  v4.2.140.md  v4.2.142.md  (+48 more)
Other/Resources/Dependencies/JRE/: Version.txt
Other/Resources/OtherScripts/ServerMaintenance/Common/GenerateCertificates/: .gitignore
Other/Resources/Support/: InformationAboutSupportedVersions.csv
ScriptCollection/: MANIFEST.in  ReadMe.md  ScriptCollection.codeunit.xml  pyproject.toml  requirements.txt  setup.cfg
ScriptCollection/Other/: UpdateDependencies.py
ScriptCollection/Other/Reference/: docfx.json
ScriptCollection/Other/Reference/ReferenceContent/: Hints.md  index.md
ScriptCollection/Other/Reference/ReferenceContent/Articles/: ConfigurationFolder.md  DownloadableTools.md  PlatformIndependentCLICommands.md  RemoteBuild.md  RequirementsForCommonProjectStructure.md  RestrictingAICommandExecution.md
ScriptCollection/Other/Reference/ReferenceContent/Articles/Examples/: scprintfilecontent.claude-settings.example.json  scruncommandinfolder.claude-settings.example.json
ScriptCollection/Other/Resources/TestCoverageHistory/: 2022-12-27_18-36-33_CoverageHistory.xml  2022-12-27_21-52-29_CoverageHistory.xml  2022-12-27_23-49-55_CoverageHistory.xml  2022-12-28_19-17-27_CoverageHistory.xml  2022-12-28_19-21-24_CoverageHistory.xml  2022-12-29_00-03-34_CoverageHistory.xml  2022-12-29_12-24-47_CoverageHistory.xml  2022-12-29_15-39-36_CoverageHistory.xml  2022-12-29_15-54-03_CoverageHistory.xml  2023-01-10_00-13-32_CoverageHistory.xml  2023-01-10_00-43-00_CoverageHistory.xml  2023-01-10_00-47-54_CoverageHistory.xml  2023-01-10_00-49-58_CoverageHistory.xml  2023-01-10_01-00-17_CoverageHistory.xml  2023-01-10_01-09-06_CoverageHistory.xml  2023-01-10_01-17-24_CoverageHistory.xml  2023-01-10_01-26-37_CoverageHistory.xml  2023-01-11_22-48-13_CoverageHistory.xml  2023-01-11_23-26-45_CoverageHistory.xml  2023-01-11_23-32-31_CoverageHistory.xml  2023-01-11_23-43-42_CoverageHistory.xml  2023-01-13_07-03-25_CoverageHistory.xml  2023-01-15_15-47-27_CoverageHistory.xml  2023-01-15_16-42-19_CoverageHistory.xml  2023-01-17_21-19-17_CoverageHistory.xml  2023-01-21_17-55-04_CoverageHistory.xml  2023-01-22_12-42-09_CoverageHistory.xml  2023-01-22_14-58-16_CoverageHistory.xml  2023-01-22_23-44-01_CoverageHistory.xml  2023-01-23_00-01-27_CoverageHistory.xml  2023-01-30_12-21-54_CoverageHistory.xml  2023-01-30_21-08-02_CoverageHistory.xml  2023-02-19_18-58-42_CoverageHistory.xml  2023-02-19_20-45-51_CoverageHistory.xml  2023-02-27_19-29-18_CoverageHistory.xml  2023-02-27_21-00-43_CoverageHistory.xml  2023-03-05_16-37-55_CoverageHistory.xml  2023-03-05_22-41-18_CoverageHistory.xml  2023-03-06_21-00-16_CoverageHistory.xml  2023-03-06_22-14-51_CoverageHistory.xml  (+525 more)
ScriptCollection/ScriptCollection/: AnionBuildPlatform.py  CertificateUpdater.py  Executables.py  GeneralUtilities.py  ProcessesRunner.py  ProgramRunnerBase.py  ProgramRunnerPopen.py  ProgramRunnerSudo.py  SCLog.py  ScriptCollectionCore.py  UnassignedVariablesCheck.py
ScriptCollection/ScriptCollection/OCIImages/: AbstractImageHandler.py  OCIImageManager.py
ScriptCollection/ScriptCollection/OCIImages/ConcreteImageHandlers/: ImageHandlerDebian.py  ImageHandlerDebianSlim.py  ImageHandlerGeneric.py  ImageHandlerGenericV.py  ImageHandlerGitlabCE.py  ImageHandlerGitlabEE.py
ScriptCollection/ScriptCollection/TFCPS/: SCTaskRunnerServer.py  TFCPS_CodeUnitSpecific_Base.py  TFCPS_CodeUnit_BuildCodeUnit.py  TFCPS_CodeUnit_BuildCodeUnits.py  TFCPS_CreateRelease.py  TFCPS_Generic.py  TFCPS_MergeToMain.py  TFCPS_MergeToStable.py  TFCPS_PreBuildCodeunitsScript.py  TFCPS_RemoteBuild.py  TFCPS_Tools_General.py  TasksForCommonProjectStructure.py.txt
ScriptCollection/ScriptCollection/TFCPS/Docker/: TFCPS_CodeUnitSpecific_Docker.py
ScriptCollection/ScriptCollection/TFCPS/DotNet/: TFCPS_CodeUnitSpecific_DotNet.py
ScriptCollection/ScriptCollection/TFCPS/Flutter/: TFCPS_CodeUnitSpecific_Flutter.py
ScriptCollection/ScriptCollection/TFCPS/Maven/: TFCPS_CodeUnitSpecific_Maven.py
ScriptCollection/ScriptCollection/TFCPS/NodeJS/: TFCPS_CodeUnitSpecific_NodeJS.py
ScriptCollection/ScriptCollection/TFCPS/Python/: TFCPS_CodeUnitSpecific_Python.py
ScriptCollection/ScriptCollection/TFCPS/Rust/: TFCPS_CodeUnitSpecific_Rust.py
ScriptCollection/ScriptCollectionTests/: test_GeneralUtilities.py  test_SCLog.py  test_ScriptCollectionCore.py  test_TFCPS_Other.py  test_codestyle.py
