[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptcollection"
version = "4.3.23"
description = "The ScriptCollection is the place for reusable scripts."
readme = { file = "ReadMe.md", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = ["package", "release", "build", "management"]
authors = [
    { name = "Marius Göcke", email = "marius.goecke@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "build>=1.5.0",
    "coverage>=7.14.2",
    "cyclonedx-bom>=7.1.0",
    "defusedxml>=0.7.1",
    "keyboard>=0.13.5",
    "lcov-cobertura>=2.1.1",
    "lxml>=6.0.1",
    "ntplib>=0.4.0",
    "Pillow>=11.3.0",
    "psutil>=7.2.2",
    "pycdlib>=1.16.0",
    "Pygments>=2.20.0",
    "pylint>=4.0.6",
    "pyOpenSSL>=25.3.0",
    "PyPDF>=6.13.3",
    "pytest>=8.4.2",
    "PyYAML>=6.0.3",
    "qrcode>=8.2.0",
    "send2trash>=1.8.3",
    "twine>=6.2.0",
    "xmlschema>=4.3.1",
]

[project.urls]
Homepage = "https://github.com/anionDev/ScriptCollection"
Documentation = "https://aniondev.github.io/ScriptCollectionReference/index.html"
Changelog = "https://github.com/anionDev/ScriptCollection/tree/main/Other/Resources/Changelog"

[project.scripts]
scbuildcodeunits = "ScriptCollection.Executables:BuildCodeUnits"
scbuildcodeunitsc = "ScriptCollection.Executables:BuildCodeUnitsC"
scupdatedependencies = "ScriptCollection.Executables:UpdateDependencies"
sccalculatebitcoinblockhash = "ScriptCollection.Executables:CalculateBitcoinBlockHash"
scconvertgitrepositorytobarerepository = "ScriptCollection.Executables:ConvertGitRepositoryToBareRepository"
sccreatechangelogentry = "ScriptCollection.Executables:CreateChangelogEntry"
sccurrentuserhaselevatedprivileges = "ScriptCollection.Executables:CurrentUserHasElevatedPrivileges"
scchangefileextension = "ScriptCollection.Executables:ChangeFileExtensions"
scchangehashofprogram = "ScriptCollection.Executables:ChangeHashOfProgram"
sccheckpythonast = "ScriptCollection.Executables:CheckPythonAst"
sccreateemptyfilewithspecificsize = "ScriptCollection.Executables:CreateEmptyFileWithSpecificSize"
sccreatehashofallfiles = "ScriptCollection.Executables:CreateHashOfAllFiles"
sccreateisofilewithobfuscatedfiles = "ScriptCollection.Executables:CreateISOFileWithObfuscatedFiles"
scespoc = "ScriptCollection.Executables:Espoc"
scextractpdfpages = "ScriptCollection.Executables:ExtractPDFPages"
scfilenameobfuscator = "ScriptCollection.Executables:FilenameObfuscator"
scgeneratearc42referencetemplate = "ScriptCollection.Executables:GenerateARC42ReferenceTemplate"
scgeneratesnkfiles = "ScriptCollection.Executables:GenerateSnkFiles"
scgeneratethumbnail = "ScriptCollection.Executables:GenerateThumbnail"
schealthcheck = "ScriptCollection.Executables:Healthcheck"
sckeyboarddiagnosis = "ScriptCollection.Executables:KeyboardDiagnosis"
scmergepdfs = "ScriptCollection.Executables:MergePDFs"
scobfuscatefilesfolder = "ScriptCollection.Executables:ObfuscateFilesFolder"
scorganizelinesinfile = "ScriptCollection.Executables:OrganizeLinesInFile"
screplacesubstringsinfilenames = "ScriptCollection.Executables:ReplaceSubstringsInFilenames"
scsearchinfiles = "ScriptCollection.Executables:SearchInFiles"
sccreatesimplemergewithoutrelease = "ScriptCollection.Executables:CreateSimpleMergeWithoutRelease"
scshow2faasqrcode = "ScriptCollection.Executables:Show2FAAsQRCode"
scshowmissingfiles = "ScriptCollection.Executables:ShowMissingFiles"
scupdatenugetpackagesincsharpproject = "ScriptCollection.Executables:UpdateNugetpackagesInCsharpProject"
scuploadfile = "ScriptCollection.Executables:UploadFile"
scgeneratecertificateauthority = "ScriptCollection.Executables:GenerateCertificateAuthority"
scgeneratecertificate = "ScriptCollection.Executables:GenerateCertificate"
scgeneratecertificatesignrequest = "ScriptCollection.Executables:GenerateCertificateSignRequest"
scsigncertificate = "ScriptCollection.Executables:SignCertificate"
scfileexists = "ScriptCollection.Executables:FileExists"
scfolderexists = "ScriptCollection.Executables:FolderExists"
scocranalysisoffolder = "ScriptCollection.Executables:OCRAnalysisOfFolder"
scocranalysisoffile = "ScriptCollection.Executables:OCRAnalysisOfFile"
scocranalysisofrepository = "ScriptCollection.Executables:OCRAnalysisOfRepository"
scsetcontentoffile = "ScriptCollection.Executables:SetContentOfFile"
scprintfilecontent = "ScriptCollection.Executables:PrintFileContent"
sccreatefile = "ScriptCollection.Executables:CreateFile"
sccreatefolder = "ScriptCollection.Executables:CreateFolder"
sccreateskill = "ScriptCollection.Executables:CreateSkill"
scappendlinetofile = "ScriptCollection.Executables:AppendLineToFile"
scregexreplaceinfile = "ScriptCollection.Executables:RegexReplaceInFile"
scnormalizelineendings = "ScriptCollection.Executables:NormalizeLineEndings"
scprintfilesize = "ScriptCollection.Executables:PrintFileSize"
scfilecontainscontent = "ScriptCollection.Executables:FileContainsContent"
scremovefile = "ScriptCollection.Executables:RemoveFile"
scremovefolder = "ScriptCollection.Executables:RemoveFolder"
scremovetrailinglinebreak = "ScriptCollection.Executables:RemoveTrailingLinebreak"
screname = "ScriptCollection.Executables:Rename"
sccopy = "ScriptCollection.Executables:Copy"
scgetsize = "ScriptCollection.Executables:GetSize"
scprintosname = "ScriptCollection.Executables:PrintOSName"
scprintcurrentworkingdirectory = "ScriptCollection.Executables:PrintCurrecntWorkingDirectory"
sclistfoldercontent = "ScriptCollection.Executables:ListFolderContent"
scforeach = "ScriptCollection.Executables:ForEach"
scnpmi = "ScriptCollection.Executables:NpmI"
scupdateimagesindockercomposefile = "ScriptCollection.Executables:UpdateImagesInDockerComposeFile"
scupdatetimestampinfile = "ScriptCollection.Executables:UpdateTimestampInFile"
scloc = "ScriptCollection.Executables:LOC"
sccreaterelease = "ScriptCollection.Executables:CreateRelease"
sccleantoolscache = "ScriptCollection.Executables:CleanToolsCache"
scdownloadcachabletools = "ScriptCollection.Executables:DownloadCachableTools"
scensuredockernetworkisavailable = "ScriptCollection.Executables:EnsureDockerNetworkIsAvailable"
scensuredockernetworkisnotavailable = "ScriptCollection.Executables:EnsureDockerNetworkIsNotAvailable"
scshowexternaldockernetworks = "ScriptCollection.Executables:ShowExternalDockerNetworks"
scensureexternaldockernetworksexist = "ScriptCollection.Executables:EnsureExternalDockerNetworksExist"
screclaimspacefromdocker = "ScriptCollection.Executables:ReclaimSpaceFromDocker"
scaddimagetocustomregistry = "ScriptCollection.Executables:AddImageToCustomRegistry"
scsyncxlffiles = "ScriptCollection.Executables:SyncXlfFiles"
scshowversion = "ScriptCollection.Executables:ShowVersion"
scshowprojectversion = "ScriptCollection.Executables:ShowProjectVersion"
scpreparebuildpipelineforgitlab = "ScriptCollection.Executables:PrepareBuildPipelineForGitlab"
scpreparebuildpipelineforgithub = "ScriptCollection.Executables:PrepareBuildPipelineForGithub"
scsearchforsecrets = "ScriptCollection.Executables:SearchForSecrets"
scgeneratetaskfilefromworkspacefile = "ScriptCollection.Executables:GenerateTaskfileFromWorkspacefile"
scruncommandinfolder = "ScriptCollection.Executables:RunCommandInFolder"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ScriptCollection*"]
exclude = ["ScriptCollectionTests*"]

[tool.setuptools.package-data]
ScriptCollection = ["Resources/**/*"]
