[metadata]
name = scriptcollection
version = 4.2.81
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = The ScriptCollection is the place for reusable scripts.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/ScriptCollection
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = package release build management
project_urls =
    Documentation = https://aniondev.github.io/ScriptCollectionReference/index.html
    Changelog = https://github.com/anionDev/ScriptCollection/tree/main/Other/Resources/Changelog

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    build>=1.5.0
    coverage>=7.13.5
    cyclonedx-bom>=7.1.0
    defusedxml>=0.7.1
    keyboard>=0.13.5
    lcov-cobertura>=2.1.1
    lxml>=6.0.1
    ntplib>=0.4.0
    Pillow>=11.3.0
    psutil>=7.2.2
    pycdlib>=1.16.0
    Pygments>=2.20.0
    pylint>=4.0.5
    pyOpenSSL>=25.3.0
    PyPDF>=6.10.2
    pytest>=8.4.2
    PyYAML>=6.0.3
    qrcode>=8.2.0
    send2trash>=1.8.3
    twine>=6.2.0
    xmlschema>=4.3.1

[options.packages.find]
where = .
exclude = ScriptCollectionTests

[options.package_data]
ScriptCollection = Resources/**/*

[options.entry_points]
console_scripts =
    scbuildcodeunits = ScriptCollection.Executables:BuildCodeUnits
    scbuildcodeunitsc = ScriptCollection.Executables:BuildCodeUnitsC
    scupdatedependencies = ScriptCollection.Executables:UpdateDependencies
    sccalculatebitcoinblockhash = ScriptCollection.Executables:CalculateBitcoinBlockHash
    scconvertgitrepositorytobarerepository=ScriptCollection.Executables:ConvertGitRepositoryToBareRepository
    sccreatechangelogentry = ScriptCollection.Executables:CreateChangelogEntry
    sccurrentuserhaselevatedprivileges = ScriptCollection.Executables:CurrentUserHasElevatedPrivileges
    scchangefileextension = ScriptCollection.Executables:ChangeFileExtensions
    scchangehashofprogram = ScriptCollection.Executables:ChangeHashOfProgram
    sccreateemptyfilewithspecificsize = ScriptCollection.Executables:CreateEmptyFileWithSpecificSize
    sccreatehashofallfiles = ScriptCollection.Executables:CreateHashOfAllFiles
    sccreateisofilewithobfuscatedfiles = ScriptCollection.Executables:CreateISOFileWithObfuscatedFiles
    scespoc= ScriptCollection.Executables:Espoc
    scextractpdfpages = ScriptCollection.Executables:ExtractPDFPages
    scfilenameobfuscator = ScriptCollection.Executables:FilenameObfuscator
    scgeneratearc42referencetemplate = ScriptCollection.Executables:GenerateARC42ReferenceTemplate
    scgeneratesnkfiles = ScriptCollection.Executables:GenerateSnkFiles
    scgeneratethumbnail = ScriptCollection.Executables:GenerateThumbnail
    schealthcheck = ScriptCollection.Executables:Healthcheck
    sckeyboarddiagnosis = ScriptCollection.Executables:KeyboardDiagnosis
    scmergepdfs = ScriptCollection.Executables:MergePDFs
    scobfuscatefilesfolder = ScriptCollection.Executables:ObfuscateFilesFolder
    scorganizelinesinfile = ScriptCollection.Executables:OrganizeLinesInFile
    screplacesubstringsinfilenames = ScriptCollection.Executables:ReplaceSubstringsInFilenames
    scsearchinfiles = ScriptCollection.Executables:SearchInFiles
    sccreatesimplemergewithoutrelease = ScriptCollection.Executables:CreateSimpleMergeWithoutRelease
    scshow2faasqrcode = ScriptCollection.Executables:Show2FAAsQRCode
    scshowmissingfiles = ScriptCollection.Executables:ShowMissingFiles
    scupdatenugetpackagesincsharpproject = ScriptCollection.Executables:UpdateNugetpackagesInCsharpProject
    scuploadfile = ScriptCollection.Executables:UploadFile
    scgeneratecertificateauthority = ScriptCollection.Executables:GenerateCertificateAuthority
    scgeneratecertificate = ScriptCollection.Executables:GenerateCertificate
    scgeneratecertificatesignrequest = ScriptCollection.Executables:GenerateCertificateSignRequest
    scsigncertificate = ScriptCollection.Executables:SignCertificate
    scfileexists=ScriptCollection.Executables:FileExists
    scfolderexists=ScriptCollection.Executables:FolderExists
    scocranalysisoffolder=ScriptCollection.Executables:OCRAnalysisOfFolder
    scocranalysisoffile=ScriptCollection.Executables:OCRAnalysisOfFile
    scocranalysisofrepository=ScriptCollection.Executables:OCRAnalysisOfRepository
    scsetcontentoffile=ScriptCollection.Executables:SetContentOfFile
    scprintfilecontent=ScriptCollection.Executables:PrintFileContent
    sccreatefile=ScriptCollection.Executables:CreateFile
    sccreatefolder=ScriptCollection.Executables:CreateFolder
    scappendlinetofile=ScriptCollection.Executables:AppendLineToFile
    scregexreplaceinfile=ScriptCollection.Executables:RegexReplaceInFile
    scprintfilesize=ScriptCollection.Executables:PrintFileSize
    scfilecontainscontent=ScriptCollection.Executables:FileContainsContent
    scremovefile=ScriptCollection.Executables:RemoveFile
    scremovefolder=ScriptCollection.Executables:RemoveFolder
    screname=ScriptCollection.Executables:Rename
    sccopy=ScriptCollection.Executables:Copy
    scgetsize=ScriptCollection.Executables:GetSize
    scprintosname=ScriptCollection.Executables:PrintOSName
    scprintcurrentworkingdirectory=ScriptCollection.Executables:PrintCurrecntWorkingDirectory
    sclistfoldercontent=ScriptCollection.Executables:ListFolderContent
    scforeach=ScriptCollection.Executables:ForEach
    scnpmi=ScriptCollection.Executables:NpmI
    scupdateimagesindockercomposefile=ScriptCollection.Executables:UpdateImagesInDockerComposeFile
    scupdatetimestampinfile=ScriptCollection.Executables:UpdateTimestampInFile
    scloc=ScriptCollection.Executables:LOC
    sccreaterelease=ScriptCollection.Executables:CreateRelease
    sccleantoolscache=ScriptCollection.Executables:CleanToolsCache
    scensuredockernetworkisavailable=ScriptCollection.Executables:EnsureDockerNetworkIsAvailable
    screclaimspacefromdocker=ScriptCollection.Executables:ReclaimSpaceFromDocker
    scaddimagetocustomregistry=ScriptCollection.Executables:AddImageToCustomRegistry
    scsyncxlffiles=ScriptCollection.Executables:SyncXlfFiles
